# 2fa-cli

./: Cargo.toml  README-zh_CN.md  README.md  install.sh
.github/workflows/: release.yml
scripts/: install.sh  quick-release.sh
src/: main.rs
