[package]
name = "two_fa_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2fa-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
base32 = "0.5.1"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
totp-rs = "5.7.0"
