[package]
name = "two_fa_cli"
version = "0.0.3"
edition = "2021"
description = "A simple, fast, and secure command-line tool for generating TOTP codes"
authors = ["liam"]
license = "MIT"
homepage = "https://github.com/MixBoxLab/2fa-cli"
repository = "https://github.com/MixBoxLab/2fa-cli"
keywords = ["2fa", "totp", "authentication", "cli", "security"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "2fa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
base32 = "0.5.1"
clap = { version = "4.5.45", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
totp-rs = "5.7.0"
