[package]
name = "two_fa_cli"
version = "1.0.2"
edition = "2021"
description = "A simple, fast, and secure command-line tool for generating TOTP codes"
authors = ["liam"]
license = "MIT"
homepage = "https://github.com/MixBoxLab/2fa-cli"
repository = "https://github.com/MixBoxLab/2fa-cli"
keywords = ["2fa", "totp", "authentication", "cli", "security"]
categories = ["command-line-utilities", "authentication"]

[[bin]]
name = "2fa"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
base32 = "0.5.1"
clap = { version = "4.5.45", features = ["derive"] }
cli-clipboard = "0.4.0"
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
totp-rs = "5.7.0"

# 优化配置 - 减少二进制文件体积
[profile.release]
strip = true          # 移除符号表和调试信息
opt-level = "z"       # 优化代码大小而非速度
lto = true           # 链接时优化
codegen-units = 1    # 单个代码生成单元，提高优化效果
panic = "abort"      # 使用abort而非unwind，减少体积
